# llama.cpp

./: gsm8k-conversational-test.jsonl  gsm8k-train-500samples.jsonl
common/: arg.cpp  common.h
tools/: CMakeLists.txt
tools/imatrix/: CMakeLists.txt  imatrix.cpp
tools/imatrix-common/: CMakeLists.txt  imatrix.cpp  imatrix.h
tools/imatrix-sequences/: CMakeLists.txt  imatrix.cpp
tools/server/: CMakeLists.txt  server.cpp
